platform_admins/starter_repos/anthos_config_management/namespaces/frontend/frontend-hydrated.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    configmanagement.gke.io/cluster-selector: prod
    sidecar.istio.io/userVolume: '[{"name": "cloud-ops-sa-volume", "secret": {"secretName":
      "cloud-ops-sa"}}]'
    sidecar.istio.io/userVolumeMount: '[{"name": "cloud-ops-sa-volume", "mountPath":
      "/home/istio-proxy/.config/gcloud"}]'
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
        configmanagement.gke.io/cluster-selector: prod
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        sidecar.istio.io/userVolume: '[{"name": "cloud-ops-sa-volume", "secret": {"secretName":
          "cloud-ops-sa"}}]'
        sidecar.istio.io/userVolumeMount: '[{"name": "cloud-ops-sa-volume", "mountPath":
          "/home/istio-proxy/.config/gcloud"}]'
      labels:
        app: frontend
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice.productcatalog:3550
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice.currency:7000
        - name: CART_SERVICE_ADDR
          value: cartservice.cart:7070
        - name: RECOMMENDATION_SERVICE_ADDR
          value: recommendationservice.recommendation:8080
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice.shipping:50051
        - name: CHECKOUT_SERVICE_ADDR
          value: checkoutservice.checkout:5050
        - name: AD_SERVICE_ADDR
          value: adservice.ad:9555
        - name: ENV_PLATFORM
          value: gcp
        image: gcr.io/google-samples/microservices-demo/frontend:v0.2.0
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: Cookie
              value: shop_session-id=x-liveness-probe
            path: /_healthz
            port: 8080
          initialDelaySeconds: 10
        name: server
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: Cookie
              value: shop_session-id=x-readiness-probe
            path: /_healthz
            port: 8080
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      serviceAccount: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations: {}
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-google-metadata
spec:
  addresses:
  - 169.254.169.254
  hosts:
  - metadata.google.internal
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-googleapis
spec:
  hosts:
  - accounts.google.com
  - '*.googleapis.com'
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  gateways:
  - frontend-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
